Try to extend AssemblySearchPaths using BeforeResolveReferences

--- a/KoenZomers.KeePass.OneDriveSync/KoenZomers.KeePass.OneDriveSync.csproj
+++ b/KoenZomers.KeePass.OneDriveSync/KoenZomers.KeePass.OneDriveSync.csproj
@@ -182,4 +182,11 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <Target Name="BeforeResolveReferences">
+  <CreateProperty
+    Value=".;$(AssemblySearchPaths)">
+    <Output TaskParameter="Value"
+      PropertyName="AssemblySearchPaths" />
+</CreateProperty>
+</Target>  
 </Project>
