Try $(SolutionDir) variable instead of current directory (.)

--- a/KoenZomers.KeePass.OneDriveSync/KoenZomers.KeePass.OneDriveSync.csproj
+++ b/KoenZomers.KeePass.OneDriveSync/KoenZomers.KeePass.OneDriveSync.csproj
@@ -184,7 +184,7 @@
   -->
   <Target Name="BeforeResolveReferences">
   <CreateProperty
-    Value=".;$(AssemblySearchPaths)">
+    Value="$(SolutionDir);$(AssemblySearchPaths)">
     <Output TaskParameter="Value"
       PropertyName="AssemblySearchPaths" />
 </CreateProperty>
