--- a/KoenZomers.KeePass.OneDriveSync/KoenZomers.KeePass.OneDriveSync.csproj
+++ b/KoenZomers.KeePass.OneDriveSync/KoenZomers.KeePass.OneDriveSync.csproj
@@ -173,7 +173,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>REM $(SolutionDir)create-plgx.cmd</PostBuildEvent>
+    <!--PostBuildEvent>REM $(SolutionDir)create-plgx.cmd</PostBuildEvent-->
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
